[package]
name = "pki"
version = "0.1.0"
edition = "2021"
description = """
PKI Library

Basically just wraps some RustCrypto packages

https://github.com/RustCrypto
"""

[lib]
name = "pki"
path = "src/lib.rs"

[dependencies]
const-oid = { version = "0.9.2", default-features = false, features = ["db"] }
der = { version = "0.7.3", default-features = false, features = ["alloc", "derive", "flagset", "oid", "pem"] }
rand_core = { version = "0.6.4", default-features = false }
rsa = { version = "0.9.0-pre.1", default-features = false, features = ["pem", "pkcs5", "sha1", "sha2"] }
sha1 = { version = "0.10.5", default-features = false, features = ["oid"] }
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
signature = { version = "2.1.0", default-features = false, features = ["digest", "rand_core"] }
x509-cert = { version = "0.2.1", default-features = false, features = ["pem"] }

[dev-dependencies]
rand_chacha = { version = "0.3" }
