[package]
name = "pki"
version = "0.1.0"
edition = "2021"
description = """
PKI Library

Basically just wraps some RustCrypto packages

https://github.com/RustCrypto
"""

[lib]
name = "pki"
path = "src/lib.rs"

[dependencies]
const-oid = { version = "0.9.2", default-features = false, features = ["db"] }
der = { version = "0.7.3", default-features = false, features = ["alloc", "derive", "flagset", "oid", "pem"] }
rand_core = { version = "0.6.4", default-features = false }
signature = { version = "2.1.0", default-features = false, features = ["digest", "rand_core"] }
spki = { version = "0.7.1", default-features = false, features = ["alloc"] }
x509-cert = { version = "0.2.1", default-features = false, features = ["pem"] }
sha1 = { version = "0.10.5", default-features = false, features = ["oid"] }

# optional dependencies
sha2 = { version = "0.10.6", optional = true, default-features = false, features = ["oid"] }
rsa = { version = "0.9.0-pre.1", optional = true, default-features = false, features = ["pem", "pkcs5", "sha1", "sha2"] }
dsa = { version = "0.6.1", optional = true, default-features = false }
ecdsa = { version = "0.16.8", optional = true, default-features = false, features = ["pem", "pkcs8", "signing", "verifying"] }
k256 = { version = "0.13.1", optional = true, default-features = false, features = ["ecdsa"] }
p192 = { version = "0.13.0", optional = true, default-features = false, features = ["ecdsa"] }
p224 = { version = "0.13.2", optional = true, default-features = false, features = ["ecdsa"] }
p256 = { version = "0.13.2", optional = true, default-features = false, features = ["ecdsa"] }
p384 = { version = "0.13.0", optional = true, default-features = false, features = ["ecdsa"] }

[dev-dependencies]
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3" }

[features]
default = [ "rsa", "sha2" ]
dsa = [ "dep:dsa" ]
ecc = [ "sha2", "dep:ecdsa", "dep:k256", "dep:p192", "dep:p224", "dep:p256", "dep:p384" ]
rsa = [ "dep:rsa" ]
sha2 = [ "dep:sha2" ]
all = [ "dsa", "ecc", "rsa", "sha2" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
